// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Duo Authenticator Transformer Tests should add correct title and DuoWindow in enroll flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.duo.enroll.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "host": "testhost",
          "signedToken": "testSignedToken",
          "step": "enroll-authenticator",
          "title": "oie.duo.enroll.title",
        },
        "type": "DuoWindow",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Duo Authenticator Transformer Tests should add correct title and DuoWindow in verify flow 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.duo.verify.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "host": "testhost",
          "signedToken": "testSignedToken",
          "step": "challenge-authenticator",
          "title": "oie.duo.verify.title",
        },
        "type": "DuoWindow",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
